prodinfra/infra/k8s/atonixcorp-project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atonixcorp-project
  namespace: atonixcorpvm
  labels:
    app: atonixcorp-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atonixcorp-project
  template:
    metadata:
      labels:
        app: atonixcorp-project
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: atonix-frontend-container
        image: localhost:5000/atonix-prod-dashboard-frontend:amd64
        ports:
        - containerPort: 3000
