prodinfra/infra/k8s/dns-back-fron-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atonixcorp-stack
  namespace: atonixcorpvm
  labels:
    app.kubernetes.io/name: atonixcorp-stack
    app.kubernetes.io/component: fullstack
    app.kubernetes.io/instance: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atonixcorp-stack
  template:
    metadata:
      labels:
        app: atonixcorp-stack
    spec:
      containers:
        - name: frontend
          image: atonixdev/atonixwebapp:latest
          ports:
            - containerPort: 8080
        - name: backend
          image: atonixdev/atonixapi:latest
          ports:
            - containerPort: 8000
