prodinfra/infra/k8s/atonixwebapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atonixcorp-frontend-service
  namespace: atonixcorpvm
spec:
  selector:
    app: atonixcorp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
