prodinfra/infra/k8s/frontend-dns-tw1.yaml
apiVersion: v1
kind: Service
metadata:
  name: atonixcorp-frontend
  namespace: default
spec:
  selector:
    app: atonixcorp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
