prodinfra/infra/k8s/dns-back-fron-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atonixcorp-ingress
  namespace: atonixcorpvm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: atonixcorpvm.atonixcorp.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atonixcorp-frontend
                port:
                  number: 80
