prodinfra/infra/k8s/frontend-nginx.ingress-dns-tw1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atonixcorp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: atonixcorp.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atonixcorp-frontend
                port:
                  number: 80
